fix(bootstrap4-theme): change overflow hidden to overflow scroll for default table

--- a/packages/bootstrap4-theme/src/scss/extends/_tables.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_tables.scss
@@ -144,7 +144,7 @@
 
 @media screen and (max-width: $uds-breakpoint-md) {
   .uds-table {
-    overflow-x: hidden;
+    overflow-x: scroll;
   }
 
   .uds-table-fixed {
